--- a/Mobil 1 Fan Guide/en.lproj/MainStoryboard.storyboard
+++ b/Mobil 1 Fan Guide/en.lproj/MainStoryboard.storyboard
@@ -54,14 +54,26 @@
             </objects>
             <point key="canvasLocation" x="695" y="418"/>
         </scene>
-        <!--View Controller - Videos-->
+        <!--Video View Controller - Videos-->
         <scene sceneID="hpd-Wh-b6N">
             <objects>
-                <viewController id="pX8-y0-f3R" sceneMemberID="viewController">
+                <viewController id="pX8-y0-f3R" customClass="M1VideoViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WiE-64-iXm">
                         <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="top" image="VideoCarousel.png" id="acj-di-2XP">
+                                <rect key="frame" x="0.0" y="44" width="320" height="455"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <webView opaque="NO" contentMode="scaleToFill" id="TbV-Hr-naV">
+                                <rect key="frame" x="0.0" y="44" width="320" height="180"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="delegate" destination="pX8-y0-f3R" id="9Xk-Ht-9gc"/>
+                                </connections>
+                            </webView>
                             <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" id="dyy-20-JT3" customClass="M1NavigationBar">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -69,10 +81,84 @@
                                     <navigationItem title="Videos" id="S97-Vi-HET"/>
                                 </items>
                             </navigationBar>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" pagingEnabled="YES" showsVerticalScrollIndicator="NO" id="LqF-FY-fzi">
+                                <rect key="frame" x="0.0" y="222" width="320" height="184"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <webView opaque="NO" tag="1" contentMode="scaleToFill" id="dGh-TC-8B2">
+                                        <rect key="frame" x="11" y="14" width="125" height="69"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="pX8-y0-f3R" id="m3v-5X-Udw"/>
+                                        </connections>
+                                    </webView>
+                                    <webView opaque="NO" tag="2" contentMode="scaleToFill" id="xsf-9I-5ra">
+                                        <rect key="frame" x="155" y="14" width="125" height="69"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="pX8-y0-f3R" id="SoO-NB-9yR"/>
+                                        </connections>
+                                    </webView>
+                                    <webView opaque="NO" tag="3" contentMode="scaleToFill" id="P7d-W2-GQL">
+                                        <rect key="frame" x="300" y="14" width="125" height="69"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="pX8-y0-f3R" id="PZ1-lF-TOX"/>
+                                        </connections>
+                                    </webView>
+                                    <webView opaque="NO" tag="4" contentMode="scaleToFill" id="fWa-3u-KjE">
+                                        <rect key="frame" x="445" y="14" width="125" height="69"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="pX8-y0-f3R" id="dLh-su-KPx"/>
+                                        </connections>
+                                    </webView>
+                                    <webView opaque="NO" tag="5" contentMode="scaleToFill" id="hXG-Fs-yBi">
+                                        <rect key="frame" x="11" y="104" width="125" height="69"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="pX8-y0-f3R" id="x3W-Kw-jAP"/>
+                                        </connections>
+                                    </webView>
+                                    <webView opaque="NO" tag="6" contentMode="scaleToFill" id="b4z-Ph-sPw">
+                                        <rect key="frame" x="155" y="104" width="125" height="69"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="pX8-y0-f3R" id="oNb-4C-bP1"/>
+                                        </connections>
+                                    </webView>
+                                    <webView opaque="NO" tag="7" contentMode="scaleToFill" id="que-sl-NsY">
+                                        <rect key="frame" x="300" y="104" width="125" height="69"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="pX8-y0-f3R" id="Tfj-wp-sOU"/>
+                                        </connections>
+                                    </webView>
+                                    <webView opaque="NO" tag="8" contentMode="scaleToFill" id="CL8-Qe-uuL">
+                                        <rect key="frame" x="445" y="104" width="125" height="69"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="pX8-y0-f3R" id="tfs-cd-iwf"/>
+                                        </connections>
+                                    </webView>
+                                </subviews>
+                            </scrollView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.14652714416058393" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Videos" image="70-tv.png" id="v1E-RW-sO5"/>
+                    <connections>
+                        <outlet property="heroVideoView" destination="TbV-Hr-naV" id="b4K-Ab-pja"/>
+                        <outlet property="videoScrollView" destination="LqF-FY-fzi" id="SOi-yE-i8P"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I5E-mQ-aHe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -231,13 +317,49 @@ Circuit of The Americas is ideally situated on a 1000-acre site in southeast Aus
     </scenes>
     <resources>
         <image name="139-flags.png" width="42" height="21"/>
-        <image name="166-newspaper.png" width="16" height="16"/>
+        <image name="166-newspaper.png" width="28" height="23"/>
         <image name="70-tv.png" width="24" height="24"/>
         <image name="91-beaker-2.png" width="20" height="24"/>
         <image name="InfoDivider@2x.png" width="88" height="640"/>
         <image name="InfoDrawerBackground@2x.png" width="10" height="640"/>
         <image name="TickerGradientExtended@2x.png" width="640" height="1260"/>
+        <image name="VideoCarousel.png" width="320" height="353"/>
     </resources>
+    <classes>
+        <class className="M1CountdownViewController" superclassName="UITabBarController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1CountdownViewController.h"/>
+        </class>
+        <class className="M1FirstViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1FirstViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="newsTable" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="M1MapViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1MapViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="toggleInfoDrawer:"/>
+                <relationship kind="outlet" name="containerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="infoView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="mapCanvas" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="mapScrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+            </relationships>
+        </class>
+        <class className="M1NavigationBar" superclassName="UINavigationBar">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1NavigationBar.h"/>
+        </class>
+        <class className="M1SecondViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1SecondViewController.h"/>
+        </class>
+        <class className="M1VideoViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1VideoViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="heroVideoView" candidateClass="UIWebView"/>
+                <relationship kind="outlet" name="videoScrollView" candidateClass="UIScrollView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
