--- a/Mobil 1 Fan Guide/en.lproj/MainStoryboard.storyboard
+++ b/Mobil 1 Fan Guide/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2840" systemVersion="12B19" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2840" systemVersion="12C54" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1926"/>
     </dependencies>
@@ -293,14 +293,14 @@
                                             <action selector="toggleInfoDrawer:" destination="ErH-1g-Laj" eventType="touchUpInside" id="S4E-3e-teN"/>
                                         </connections>
                                     </button>
-                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" momentary="YES" id="LSZ-r6-1Ek">
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" momentary="YES" id="LSZ-r6-1Ek">
                                         <rect key="frame" x="7" y="7" width="137" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <segments>
                                             <segment title="Track"/>
                                             <segment title="Fan Fest"/>
                                         </segments>
-                                        <color key="tintColor" red="0.054901964962482452" green="0.15686275064945221" blue="0.24705883860588074" alpha="1" colorSpace="deviceRGB"/>
+                                        <color key="tintColor" red="0.095935980765310722" green="0.2741027910273019" blue="0.43171190693430656" alpha="1" colorSpace="deviceRGB"/>
                                     </segmentedControl>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -319,11 +319,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gx8-UR-9Ol" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <view contentMode="scaleToFill" id="n4M-c6-RbY">
-                    <rect key="frame" x="0.0" y="0.0" width="150" height="300"/>
+                    <rect key="frame" x="0.0" y="-20" width="150" height="320"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="InfoDrawerBackground@2x.png" id="Sxr-qJ-85q">
-                            <rect key="frame" x="0.0" y="0.0" width="150" height="300"/>
+                            <rect key="frame" x="0.0" y="0.0" width="150" height="320"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         </imageView>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="The Track" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="pmJ-gN-alS">
@@ -335,7 +335,7 @@
                             <color key="shadowColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         </label>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" id="E0i-du-qSQ">
-                            <rect key="frame" x="2" y="38" width="146" height="260"/>
+                            <rect key="frame" x="2" y="38" width="146" height="280"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <string key="text">Circuit Of The Americas is a multi-purpose facility that will host the most prestigious racing events in the world, including the Formula 1 United States Grand Prix™. It is the first purpose-built Grand Prix facility in the U.S.
 
@@ -382,41 +382,6 @@ Circuit of The Americas is ideally situated on a 1000-acre site in southeast Aus
         <image name="TickerGradientExtended@2x.png" width="640" height="1260"/>
         <image name="VideoCarousel.png" width="320" height="353"/>
     </resources>
-    <classes>
-        <class className="M1CountdownViewController" superclassName="UITabBarController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1CountdownViewController.h"/>
-        </class>
-        <class className="M1FirstViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1FirstViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="newsTable" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="M1MapViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1MapViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="toggleInfoDrawer:"/>
-                <relationship kind="outlet" name="containerView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="infoView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="mapCanvas" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="mapScrollView" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-            </relationships>
-        </class>
-        <class className="M1NavigationBar" superclassName="UINavigationBar">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1NavigationBar.h"/>
-        </class>
-        <class className="M1SecondViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1SecondViewController.h"/>
-        </class>
-        <class className="M1VideoViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1VideoViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="videoThumbnailSelect:"/>
-                <relationship kind="outlet" name="videoScrollView" candidateClass="UIScrollView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
