--- a/Mobil 1 Fan Guide/en.lproj/MainStoryboard.storyboard
+++ b/Mobil 1 Fan Guide/en.lproj/MainStoryboard.storyboard
@@ -334,7 +334,7 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="Helvetica-BoldOblique" family="Helvetica" pointSize="18"/>
                                         <size key="titleShadowOffset" width="0.0" height="1"/>
-                                        <state key="normal" title="F1 CARS">
+                                        <state key="normal" title="MP4-27">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
@@ -641,7 +641,6 @@ Circuit of The Americas is ideally situated on a 1000-acre site in southeast Aus
         <class className="M1ScheduleViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/M1ScheduleViewController.h"/>
             <relationships>
-                <relationship kind="action" name="whatsThisButtonClicked:"/>
                 <relationship kind="outlet" name="scheduleTabTable" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="scheduleTabTitle" candidateClass="UILabel"/>
             </relationships>
