--- a/Mobil 1 Fan Guide/en.lproj/MainStoryboard.storyboard
+++ b/Mobil 1 Fan Guide/en.lproj/MainStoryboard.storyboard
@@ -469,6 +469,9 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="367"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="delegate" destination="GMu-dT-BbT" id="2rA-oO-w5v"/>
+                                </connections>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" red="0.074509806931018829" green="0.12156863510608673" blue="0.15294118225574493" alpha="1" colorSpace="deviceRGB"/>
